# jarvis-orb

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.md  glama.json  install.ps1  install.sh  vercel.json  windows-find-orb.txt  windows-fix.txt  windows-step7.txt  windows-test-prompt.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
brain/: pyproject.toml
brain/jarvis_brain/: cli.py  config.py  demo_server.py  entities.py  event_emitter.py  mcp_server.py  memory.py  schemas.py
brain/tests/: test_brain_lite.py  test_safety.py
demo/: demo_events.py
docs/plans/: 2026-03-16-brain-visualizer-design.md  2026-03-16-implementation-plan.md
docs/superpowers/specs/: 2026-03-22-orb-quality-buildup-design.md
landing/: index.html
orb/: index.html  package.json  pnpm-lock.yaml  vite.config.js
orb/src/: events.js  log.js  main.js  orb.js
orb/src-tauri/: Cargo.toml  tauri.conf.json
orb/src-tauri/capabilities/: default.json
orb/src-tauri/src/: main.rs
scripts/: record-demo.sh
