[project]
name = "jarvis-brain"
version = "0.1.0"
description = "Lightweight AI memory brain with MCP server"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "mcp>=1.0.0",
    "websockets>=12.0,<15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
